--- a/FAQ/Pafina-noticias.css
+++ b/FAQ/Pafina-noticias.css
@@ -1,4 +1,3 @@
-
 /* HEADER */
 
 
@@ -7,7 +6,7 @@
 
 /* ----- DESKTOP (padrão) ----- */
 
-.textos-noticias{
+.textos-noticias {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,21 +16,28 @@
 }
 
 
-#img-novos-astronautas{
+#img-novos-astronautas {
     margin-left: 60px;
     border-radius: 8px;
     width: 400px;
     height: auto;
+
+    transition: transform 0.3s ease;
+    ;
 }
 
-#novos-astronautas{
+#img-novos-astronautas:hover {
+    transform: translateY(-6px);
+}
+
+#novos-astronautas {
     display: flex;
     justify-content: center;
     font-family: "Exo 2", sans-serif;
     font-size: 32px;
 }
 
-#A-Astrolink{
+#A-Astrolink {
     font-family: "Exo 2", sans-serif;
     margin-left: 40px;
     margin-right: 40px;
@@ -40,27 +46,27 @@
 }
 
 /* ----- TABLET ----- */
-@media (max-width: 992px){
+@media (max-width: 992px) {
 
-    #textos-noticias{
+    #textos-noticias {
         flex-direction: column;
         align-items: center;
         text-align: center;
         margin-top: 40px;
     }
 
-    #img-novos-astronautas{
+    #img-novos-astronautas {
         margin-left: 0;
         width: 80%;
         max-width: 500px;
     }
 
-    #A-Astrolink{
+    #A-Astrolink {
         margin: 20px 30px;
         font-size: 22px;
     }
 
-    #novos-astronautas{
+    #novos-astronautas {
         font-size: 28px;
         margin-top: 20px;
     }
@@ -68,33 +74,33 @@
 }
 
 /* ----- CELULAR ----- */
-@media (max-width: 600px){
+@media (max-width: 600px) {
 
-    .ultimas-noticias-titulos{
+    .ultimas-noticias-titulos {
         font-size: 26px;
         text-align: center;
     }
 
-    .textos-meio-div{
+    .textos-meio-div {
         font-size: 18px;
         padding: 0 20px;
         text-align: center;
     }
 
-    #textos-noticias{
+    #textos-noticias {
         gap: 20px;
     }
 
-    #img-novos-astronautas{
+    #img-novos-astronautas {
         width: 90%;
     }
 
-    #A-Astrolink{
+    #A-Astrolink {
         margin: 10px 15px;
         font-size: 18px;
     }
 
-    #novos-astronautas{
+    #novos-astronautas {
         font-size: 24px;
     }
 
@@ -123,7 +129,7 @@
 
 /* --------- DESKTOP (padrão) --------- */
 
-#imagem-coisinha-astrolink{
+#imagem-coisinha-astrolink {
     display: flex;
     justify-content: center;
     margin-top: 80px;
@@ -131,27 +137,35 @@
 }
 
 .img1 img,
-.img2 img{
+.img2 img {
     border-radius: 8px;
     width: 700px;
     height: auto;
+
+    transition: transform 0.3s ease;
+}
+
+.img1 img:hover,
+.img2 img:hover {
+    transform: translateY(-6px);
+
 }
 
 /* --------- TABLET --------- */
-@media (max-width: 992px){
+@media (max-width: 992px) {
 
-    #imagem-coisinha-astrolink{
+    #imagem-coisinha-astrolink {
         gap: 20px;
         margin-top: 50px;
     }
 
     .img1 img,
-    .img2 img{
+    .img2 img {
         width: 45vw;
         max-width: 330px;
     }
 
-    .textos-meio-div{
+    .textos-meio-div {
         font-size: 20px;
         text-align: center;
         padding: 0 20px;
@@ -159,46 +173,47 @@
 }
 
 /* --------- CELULAR --------- */
-@media (max-width: 600px){
+@media (max-width: 600px) {
 
-    #imagem-coisinha-astrolink{
+    #imagem-coisinha-astrolink {
         flex-direction: column;
         align-items: center;
         gap: 20px;
     }
 
     .img1 img,
-    .img2 img{
+    .img2 img {
         width: 90%;
         max-width: 350px;
     }
 
-    .textos-meio-div{
+    .textos-meio-div {
         font-size: 18px;
         padding: 0 15px;
     }
 
-    .ultimas-noticias-titulos{
+    .ultimas-noticias-titulos {
         font-size: 26px;
     }
 
-    .class-espaco-titulo{
+    .class-espaco-titulo {
         margin-top: 30px;
     }
 }
 
 
 
-.ultimas-noticias-titulos{
+.ultimas-noticias-titulos {
     display: flex;
     justify-content: center;
     font-family: "Exo 2", sans-serif;
 }
-.class-espaco-titulo{
+
+.class-espaco-titulo {
     margin-top: 50px;
 }
 
-.textos-meio-div{
+.textos-meio-div {
     display: flex;
     justify-content: center;
     text-align: justify;
@@ -208,7 +223,7 @@
 
 
 
-.linha-horizontal{
+.linha-horizontal {
     margin-top: 100px;
     width: 50%;
     margin-left: auto;
@@ -216,22 +231,22 @@
     border: 1px solid white;
 }
 
-#formulario-pag-noticias{
+#formulario-pag-noticias {
     width: 800px;
     background-color: #2c3028;
     padding: 40px 40px;
     border-radius: 40px;
     border: 4px solid #575757;
-    
+
 }
 
-.negocio-meio{
-    text-align: center; 
+.negocio-meio {
+    text-align: center;
     display: flex;
     justify-content: center;
 }
 
-#FAQ-secao4{
+#FAQ-secao4 {
     background-color: rgba(142, 142, 142, 0.3);
     border: 4px solid rgba(87, 87, 87, 1);
     border-radius: 40px;
@@ -243,5 +258,3 @@
     flex-direction: column;
     justify-content: left;
 }
-
-
