--- a/header-footer.css
+++ b/header-footer.css
@@ -145,7 +145,7 @@ nav li:first-child {
     flex-direction: column;
 
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: flex-start !important;
 
     transform: translateX(100%);
     transition: transform 0.3s ease-out;
